--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -15,7 +15,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="{{ url_for('upload_generic', variable='דחיית דיון') }}">
+                <a href="{{ url_for('search_cases') }}">
                     <h4>חיפוש תיקים</h4>
 <!--                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">-->
                 </a>
