--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -27,7 +27,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
+                <a href="{{ url_for('calendar') }}">
                     <h4>כרטיסי עורכי דין</h4>
 <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
                 </a>
