--- a/AlgoLaw_Website/AlgoLawWeb/templates/show_cases_search.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/show_cases_search.html
@@ -1,16 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2>חיפוש תיקים</h2>
-    <h2> נמצאו {{cases_found_num}} תיקים</h2>
-    {% for case in cases.items %}
-        <article class="media content-section">
+    <h2 class="text-right">חיפוש תיקים</h2>
+    <br>
+    <h2 class="text-right"> נמצאו {{ cases_found_num }} תיקים</h2>
+    {% for case in cases %}
+        <article class="text-right media content-section">
             <div class="media-body">
-                <h2> ערר: {{case.orer_id}}</h2>
-                <h2>שם עורך דין: {{case.lawyer_name}}</h2>
-                <h2>מספר תיק: {{case.id}}</h2>
-                <h2>קטגוריה ראשית: {{case.first_type}}</h2>
-                <h2>תראיך דיון, שעה, מיקום: </h2>
-                <p class="article-content">{{ post.content }}</p>
+                <h2>{{ case['orer_id'] }} :ערר</h2>
+                <h2>{{ case['lawyer_1_id'] }} :שם עורך דין</h2>
+                <h2>{{ case['lawyer_2_id'] }} :שם עורך דין</h2>
+                <h2>{{ case['case_id'] }} :מספר תיק</h2>
+                <h2>קטגוריה ראשית: {{ case['first_type'] }} </h2>
+                <h2>קטגוריה משנית: {{ case['second_type'] }} </h2>
+                <h2>{{ case['location'] }} :תראיך דיון, שעה, מיקום</h2>
             </div>
         </article>
     {% endfor %}
