--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -7,7 +7,7 @@
         <div class="p-2 d-flex justify-content-end">
             <h3 style="font-weight: bold;">יש לבחור את הפעולה הרצויה</h3>
         </div>
-        <div class="row justify-content-end">
+        <div class="row justify-content-end text-right">
             <div class="col-sm-2">
                 <a href="{{ url_for('secretary_upload_files_and_split_cases') }}">
                     <h4>עדכון מידע</h4>
