--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -1,45 +1,41 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section w-85 d-flex flex-column float-right">
-<!--        <div class="p-2 d-flex justify-content-end">-->
-<!--            <img src="{{url_for('static',filename = 'Web_models/secretary.jpeg')}}" width="180" height="70">-->
-<!--        </div>-->
+    <div class="w-100 d-flex flex-column float-right">
         <h3 class="p-2 d-flex justify-content-end" style="font-weight: bold;">{{username}} שלום</h3>
-
         <div class="p-2 d-flex justify-content-end">
             <h3 style="font-weight: bold;">יש לבחור את הפעולה הרצויה</h3>
         </div>
-            <div class="d-flex justify-content-center align-content-around flex-wrap">
-                <div>
-                    <article class="d-flex justify-content-center content-section">
-                        <a class="btn btn-primary text-center" href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
-        <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-<!--                            Long vacation verification-->
-                        </a>
-                    </article>
-                </div>
-                <div>
-                    <article class="d-flex justify-content-center content-section">
-                        <a class="btn btn-primary text-center" href="{{ url_for('master_vacation_view', judge_id='none') }}">
-    <!--                        <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-                            Overall Calendar Look
-                        </a>
-                    </article>
-                </div>
-                <div>
-                    <article class="d-flex justify-content-center content-section">
-                        <a class="btn btn-primary text-center" href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
-        <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-<!--                            specific judge view-->
-                        </a>
-                    </article>
-                </div>
-                <div>
-                <a href="{{ url_for('run_logic') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">
+        <div class="row justify-content-end text-right">
+            <div class="col-sm-2">
+                <a href="{{ url_for('master_validate_users') }}">
+                    <h4>אישור משתמשים חדשים</h4>
+<!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">-->
                 </a>
             </div>
+            <div class="col-sm-2">
+                <a href="{{ url_for('search_cases') }}">
+                    <h4>חיפוש תיקים</h4>
+<!--                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">-->
+                </a>
             </div>
-        </article>
+            <div class="col-sm-2">
+                <a href="{{ url_for('calendar') }}">
+                    <h4>לו״ז</h4>
+<!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">-->
+                </a>
+            </div>
+            <div class="col-sm-2">
+                <a href="{{ url_for('home') }}">
+                    <h4>ניתוח נתונים</h4>
+<!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
+                </a>
+            </div>
+            <div class="col-sm-2">
+                <a href="{{ url_for('home') }}">
+                    <h4>שינוי משקלות</h4>
+<!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
+                </a>
+            </div>
+        </div>
     </div>
 {% endblock content %}
