--- a/AlgoLaw_Website/AlgoLawWeb/templates/register.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/register.html
@@ -69,7 +69,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.role(class="form-control form-control-lg text-right") }}
+                        {{ form.role(class="form-control form-control-lg text-right", dir="rtl") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
