--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('master_change_weights') }}">
                     <h4>שינוי משקלות</h4>
 <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
                 </a>
