--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -14,14 +14,12 @@
             </div>
             <div class="col-sm-2">
                 <a href="{{ url_for('search_cases') }}">
-                    <h4>חיפוש תיקים</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/case_lookup.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div class="col-sm-2">
                 <a href="{{ url_for('calendar') }}">
-                    <h4>לו״ז</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/schedule.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div class="col-sm-2">
