--- a/AlgoLaw_Website/AlgoLawWeb/templates/search_cases.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/search_cases.html
@@ -4,9 +4,10 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <h2 class="border-bottom"> חיפוש תיק </h2>
+                <img src="{{url_for('static',filename = 'Web_models/case_search_title.jpeg')}}" width="240" height="100">
+<!--                <h2 class="border-bottom"> חיפוש תיק </h2>-->
                 <div class="form-group">
-                    {{ form.orer_id.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/orer_id.jpeg')}}" width="180" height="60">
                     {% if form.orer_id.errors %}
                         {{ form.orer_id(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
@@ -19,7 +20,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.case_id.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/case_number.jpeg')}}" width="180" height="60">
                     {% if form.case_id.errors %}
                         {{ form.case_id(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
@@ -32,7 +33,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.lawyer_id.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/lawyer_id.jpeg')}}" width="180" height="60">
                     {% if form.lawyer_id.errors %}
                         {{ form.lawyer_id(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
@@ -45,7 +46,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.main_type.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/main_case_type.jpeg')}}" width="180" height="60">
                     {% if form.main_type.errors %}
                         {{ form.main_type(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
@@ -58,7 +59,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.secondary_type.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/secondary_case_type.jpeg')}}" width="180" height="60">
                     {% if form.secondary_type.errors %}
                         {{ form.secondary_type(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
