--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_lawyer_search.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_lawyer_search.html
@@ -4,25 +4,25 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <h2 class="border-bottom"> חיפוש עורך דין </h2>
+                <img src="{{url_for('static',filename = 'Web_models/lawyer_title.jpeg')}}" width="240" height="100">
                 <div class="form-group">
-                    {{ form.lawyer_name.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/first_name.jpeg')}}" width="180" height="60">
                     {{ form.lawyer_name(class="form-control form-control-lg") }}
                 </div>
                 <div class="form-group">
-                    {{ form.lawyer_last_name.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/last_name.jpeg')}}" width="180" height="60">
                     {{ form.lawyer_last_name(class="form-control form-control-lg") }}
                 </div>
                 <div class="form-group">
-                    {{ form.lawyer_id.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/id_number.jpeg')}}" width="180" height="60">
                     {{ form.lawyer_id(class="form-control form-control-lg") }}
                 </div>
                 <div class="form-group">
-                    {{ form.lawyer_mail.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/email.jpeg')}}" width="180" height="60">
                     {{ form.lawyer_mail(class="form-control form-control-lg") }}
                 </div>
                 <div class="form-group">
-                    {{ form.lawyer_phone.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/phone_number.jpeg')}}" width="180" height="60">
                     {{ form.lawyer_phone(class="form-control form-control-lg") }}
                 </div>
                 <div class="form-group">
