--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -10,26 +10,22 @@
         <div class="row justify-content-end text-right">
             <div class="col-sm-2">
                 <a href="{{ url_for('secretary_upload_files_and_split_cases') }}">
-                    <h4>עדכון מידע</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/data_update.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div class="col-sm-2">
                 <a href="{{ url_for('search_cases') }}">
-                    <h4>חיפוש תיקים</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/case_lookup.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div class="col-sm-2">
                 <a href="{{ url_for('calendar') }}">
-                    <h4>לו״ז</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/schedule.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div class="col-sm-2">
                 <a href="{{ url_for('secretary_lawyer_search') }}">
-                    <h4>כרטיסי עורכי דין</h4>
-<!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
+                    <img src="{{url_for('static',filename = 'Web_models/lawyer_lookup.jpeg')}}" width="200" height="200">
                 </a>
             </div>
         </div>
