--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -5,7 +5,7 @@
             <img src="{{url_for('static',filename = 'Web_models/secretary.jpeg')}}" width="180" height="70">
         </div>
         <div class="p-2 d-flex justify-content-end">
-            <h3 style="font-weight: bold;">יש לבחור את הפעולה הרצויה</h3>
+            <img src="{{url_for('static',filename = 'Web_models/choose_your_option.jpeg')}}" width="300" height="100">
         </div>
         <div class="row justify-content-end text-right">
             <div class="col-sm-2">
