--- a/AlgoLaw_Website/AlgoLawWeb/templates/login.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/login.html
@@ -19,7 +19,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }}
+                    <img src="{{url_for('static',filename = 'Web_models/password.jpeg')}}" width="180" height="60">
                     {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
