--- a/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
@@ -49,6 +49,7 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         <img src="{{url_for('static',filename = 'Web_models/banner.png')}}" width="300" height="100">
+                        <img src="{{url_for('static',filename = 'Web_models/LOGO.jpeg')}}" width="250" height="100">
                     </div>
                   </div>
             </div>
