login spelling error

--- a/AlgoLaw_Website/AlgoLawWeb/templates/login.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/login.html
@@ -39,7 +39,7 @@
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
                 <small class="text-muted ml-2">
-                    <a href="#">שחכתי סיסמא</a>
+                    <a href="#">שכחתי סיסמא</a>
                 </small>
             </fieldset>
         </form>
