uploading file completed and loading cases from db

--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_upload_files_and_split_cases.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_upload_files_and_split_cases.html
@@ -18,23 +18,27 @@
         <br>
         {{ form.hidden_tag() }}
         <fieldset class="form-group col-xs-12 col-md-8">
-            <div class="text-right" style="background-color: {{ colors['mishmoret'] }};border-radius: 10px">
-                <h4>העלאת לו״ז בית הדין למשמורת</h4>
+            <div class="text-right row" style="background-color: {{ colors['mishmoret'] }};border-radius: 10px">
+                <small class="col">עודכן לאחרונה ב {{ dates['mishmoret'] }}</small>
+                <h4 class="col">העלאת לו״ז בית הדין למשמורת</h4>
                 {{ form.mishmoret_file(class="form-control-file") }}
             </div>
             <br>
-            <div class="text-right" style="background-color: {{ colors['rotations'] }};border-radius: 10px">
-                <h4>העלאת שיבוץ דיינים לשבוע תורנות</h4>
+            <div class="text-right row" style="background-color: {{ colors['rotations'] }};border-radius: 10px">
+                <small class="col">עודכן לאחרונה ב {{ dates['rotations'] }}</small>
+                <h4 class="col">העלאת שיבוץ דיינים לשבוע תורנות</h4>
                 {{ form.rotation_file(class="form-control-file") }}
             </div>
             <br>
-            <div class="text-right" style="background-color: {{ colors['holidays'] }};border-radius: 10px">
-                <h4>העלאת חגים ומועדי ישראל</h4>
+            <div class="text-right row" style="background-color: {{ colors['holidays'] }};border-radius: 10px">
+                <small class="col">עודכן לאחרונה ב {{ dates['holidays'] }}</small>
+                <h4 class="col">העלאת חגים ומועדי ישראל</h4>
                 {{ form.holidays_file(class="form-control-file") }}
             </div>
             <br>
-            <div class="text-right" style="background-color: {{ colors['cases'] }};border-radius: 10px">
-                <h4>העלאת תיקים חדשים שנפתחו במערכת</h4>
+            <div class="text-right row" style="background-color: {{ colors['cases'] }};border-radius: 10px">
+                <small class="col">עודכן לאחרונה ב {{ dates['cases'] }}</small>
+                <h4 class="col">העלאת תיקים חדשים שנפתחו במערכת</h4>
                 {{ form.new_cases_file(class="form-control-file") }}
             </div>
             <br>
